infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: blogcms.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                # this name is coming from auth clusterIP service from auth-depl file
                name: auth-srv
                port:
                  # this is the port of "auth-srv" cluster ip service, which sends the requests to container port 3000
                  number: 3000
          # this is like a catch all routes, client should be at the last
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
